fixed pin-div z-index bug.

--- a/apps/home_def/app.css
+++ b/apps/home_def/app.css
@@ -3,6 +3,7 @@ body{background: #eee}
 	position: fixed; 
 	right: 2px;
 	top:40%;	
+	z-index: 10000;
 }
 #pin-div-button{
 	width: 2em;
@@ -13,6 +14,7 @@ body{background: #eee}
 	z-index: 200;
 	background: white;
 	float: right;
+	z-index: 20000;
 }
 #pin-div-content{
 	color:black;
@@ -23,6 +25,7 @@ body{background: #eee}
 	margin-right:10px;
 	border-radius: 4px;
 	padding: 2em;
+	z-index: 20000;
 }
 #page-header{		
 	min-height: 20em;		
